--- a/Validators.IO.Developers/appsettings.json
+++ b/Validators.IO.Developers/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+	"ConnectionStrings": {
+		"AppDbContextConnection": "DataSource=database.db"
+	},
+	"AppSettings": {
+		"PolkadotMainnetUrl": "http://polkadot.mainnet.validators.io:9933",
+		"PolkadotTestnetUrl": "http://polkadot.testnet.validators.io:9933"
+	}
 }
