--- a/Validators.IO.Developers/appsettings.Production.json
+++ b/Validators.IO.Developers/appsettings.Production.json
@@ -7,5 +7,10 @@
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
 		"AppDbContextConnection": "DataSource=database.db"
+	},
+	"AppSettings": {
+		"PolkadotMainnetUrl": "http://polkadot.mainnet.validators.io:9933",
+		"PolkadotTestnetUrl": "http://polkadot.testnet.validators.io:9933"
 	}
+
 }
