--- a/Validators.IO.Developers/appsettings.Production.json
+++ b/Validators.IO.Developers/appsettings.Production.json
@@ -6,7 +6,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"AppDbContextConnection": "DataSource=database.db"
+		"AppDbContextConnection": "DataSource=C:\\Internet\\Validators.io\\Developers\\Database\\database.db"
 	},
 	"AppSettings": {
 		"PolkadotMainnetUrl": "http://polkadot.mainnet.validators.io:9933",
