--- a/Validators.IO.Developers/appsettings.Production.json
+++ b/Validators.IO.Developers/appsettings.Production.json
@@ -6,7 +6,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"AppDbContextConnection": "DataSource=C:\\Internet\\Validators.io\\Developers\\Web\\database.db" // Full path is required for deployment script to put database in correct folder.
+		"AppDbContextConnection": "DataSource=C:\\Internet\\Validators.io\\Developers\\Web\\database.db" 
 	},
 	"AppSettings": {
 		"PolkadotMainnetUrl": "http://polkadot.mainnet.validators.io:9933",
