--- a/Validators.IO.Developers/appsettings.Production.json
+++ b/Validators.IO.Developers/appsettings.Production.json
@@ -9,8 +9,8 @@
 		"AppDbContextConnection": "DataSource=database.db" 
 	},
 	"AppSettings": {
-		"PolkadotMainnetUrl": "http://polkadot.mainnet.validators.io:9933",
-		"PolkadotTestnetUrl": "http://polkadot.testnet.validators.io:9933"
+		"PolkadotMainnetUrl": "https://polkadot.nnode.io",
+		"PolkadotTestnetUrl": "https://polkadot.testnet.nnode.io"
 	}
 
 }
