--- a/Validators.IO.Developers/appsettings.json
+++ b/Validators.IO.Developers/appsettings.json
@@ -10,7 +10,7 @@
 		"AppDbContextConnection": "DataSource=database.db"
 	},
 	"AppSettings": {
-		"PolkadotMainnetUrl": "http://polkadot.mainnet.validators.io:9933",
-		"PolkadotTestnetUrl": "http://polkadot.testnet.validators.io:9933"
+		"PolkadotMainnetUrl": "https://polkadot.nnode.io",
+		"PolkadotTestnetUrl": "https://polkadot.testnet.nnode.io"
 	}
 }
